--- a/cvmd2html.fsproj
+++ b/cvmd2html.fsproj
@@ -1,4 +1,4 @@
-<!-- 0.0.1.2 -->
+<!-- 0.0.1.3 -->
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
@@ -19,5 +19,8 @@
     <Reference Include="Interop.WbemScripting.dll">
       <HintPath>.\lib\Interop.WbemScripting.dll</HintPath>
     </Reference>
+    <ProjectReference Include=".\StdRegProv.fsproj">
+      <Name>StdRegProv</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
